Api Implementation + Theme Change

--- a/app/src/main/res/layout/list_item_job.xml
+++ b/app/src/main/res/layout/list_item_job.xml
@@ -100,6 +100,6 @@
             android:id="@+id/button_apply_now"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Apply Now" />
+            android:text="Take Quiz Now" />
     </LinearLayout>
 </LinearLayout>
