--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,12 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
     <color name="grey">#565656</color>
+    <color name="green">#00B074</color>
+    <color name="green_500">#078A5D</color>
+    <color name="blue">#2B9BFF</color>
+    <color name="white">#EFFDF5</color>
+    <color name="teal">#2B3940</color>
+    <color name="red">#e74c3c</color>
+
 </resources>
