--- a/app/src/main/res/drawable/ic_wave.xml
+++ b/app/src/main/res/drawable/ic_wave.xml
@@ -6,6 +6,6 @@
 
   <path
       android:pathData="M0,128L48,112C96,96 192,64 288,42.7C384,21 480,11 576,37.3C672,64 768,128 864,170.7C960,213 1056,235 1152,208C1248,181 1344,107 1392,69.3L1440,32L1440,0L1392,0C1344,0 1248,0 1152,0C1056,0 960,0 864,0C768,0 672,0 576,0C480,0 384,0 288,0C192,0 96,0 48,0L0,0Z"
-      android:fillColor="@color/grey"
+      android:fillColor="@color/green"
       />
 </vector>
