Quiz Feature partialy done

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,4 +9,10 @@
             android:icon="@drawable/ic_menu_home"
             android:title="@string/menu_home" />
     </group>
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/nav_quizhome"
+            android:icon="@drawable/baseline_school_24"
+            android:title="Quizzes" />
+    </group>
 </menu>
