--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,4 +45,20 @@
         <item name="android:textColor">@color/black</item>
         <item name="buttonTint">@color/green</item>
     </style>
+
+    <style name="titleTextStyle">
+        <item name="android:textSize">28sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="text_heading">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="text_value_heading">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/green</item>
+    </style>
 </resources>
