--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -76,7 +76,7 @@
 
 
   <TextView
-      android:id="@+id/textView78"
+      android:id="@+id/questionTV"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
@@ -100,9 +100,9 @@
       android:singleLine="true"
       android:text="@string/next"
       app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="@+id/textView78"
+      app:layout_constraintEnd_toEndOf="@+id/questionTV"
       app:layout_constraintHorizontal_bias="1.0"
-      app:layout_constraintStart_toStartOf="@+id/textView78"
+      app:layout_constraintStart_toStartOf="@+id/questionTV"
       app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
 
   <LinearLayout
@@ -112,9 +112,9 @@
       android:layout_marginTop="25dp"
       android:checkedButton="@id/radioButton1"
       android:orientation="horizontal"
-      app:layout_constraintEnd_toEndOf="@+id/textView78"
-      app:layout_constraintStart_toStartOf="@+id/textView78"
-      app:layout_constraintTop_toBottomOf="@+id/textView78">
+      app:layout_constraintEnd_toEndOf="@+id/questionTV"
+      app:layout_constraintStart_toStartOf="@+id/questionTV"
+      app:layout_constraintTop_toBottomOf="@+id/questionTV">
 
     <LinearLayout
         android:layout_width="match_parent"
