--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/nav_home">
-
+    <action android:id="@+id/action_quizhome"
+        app:destination="@id/nav_quizhome"/>
     <fragment
         android:id="@+id/nav_home"
         android:name="com.wazifate.wazifate.HomeScreen.ui.home.HomeFragment"
